--- a/assets/style/paginal-inicial/theme-default.css
+++ b/assets/style/paginal-inicial/theme-default.css
@@ -1,8 +1,8 @@
 body {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    overflow-x: hidden;
 }
 
 main {
@@ -13,6 +13,29 @@ main {
     flex-direction: column;
     align-items: center;
     width: 50em;
+    margin-top: 3em;
+}
+
+footer {
+    color: #333;
+    font-size: 18px;
+    font-weight: 300;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    background-color: rgba(109, 233, 146, 0.205);
+    padding: 1em;
+    margin-top: 2em;
+}
+
+.footer a {
+    font-weight: 400;
+    color: #3a9e5f;
+    transition: all .3s ease-in-out;
+}
+
+.footer a:hover {
+    color: #147236;
 }
 
 /* Edição geral */
@@ -23,6 +46,7 @@ main {
     color: #fff;
     padding: .5em 1em;
     font-size: 12px;
+    font-weight: 300;
     margin-left: .5em;
     transition: all .3s ease-in-out; 
 }
@@ -130,7 +154,7 @@ main {
 
 .projetos-e-desenvolvimento {
     display: flex;
-    margin: 2.5em 0em;
+    margin-top: 2.5em;
     width: 85%;
 }
 
@@ -168,3 +192,44 @@ main {
 .desen-primeiro span, .projetos-finalizados span {
     font-weight: 700;
 }
+
+/* Section - Exercícios */
+
+.exercicios {
+    margin-bottom: 3em;
+    width: 82.5%;
+}
+
+.exercicios h2 {
+    font-size: 1.5em;
+    margin-bottom: .5em;
+}
+
+.exercicios h2::after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: .2em;
+    background-color: #e7e7e7;
+    border-radius: 1em;
+    margin-top: .1em;
+}
+
+.text-exercicios p {
+    margin-bottom: 1em;
+}
+
+.text-exercicios button {
+    color: #fff;
+    background-color: #5dbd5d;
+    border-left: .5em solid #147236;
+    font-weight: 700;
+    transition: all .3s ease-in-out;
+    padding: 1em;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.text-exercicios button:hover {
+    background-color: #3a9e5f;
+}  
