--- a/assets/style/default-style.css
+++ b/assets/style/default-style.css
@@ -21,3 +21,24 @@ body {
     width: 100vw;
 }
 
+footer {
+    color: #333;
+    font-size: 18px;
+    font-weight: 300;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    background-color: rgba(109, 233, 146, 0.205);
+    padding: 1em;
+    margin-top: 2em;
+}
+
+.footer a {
+    font-weight: 400;
+    color: #3a9e5f;
+    transition: all .3s ease-in-out;
+}
+
+.footer a:hover {
+    color: #147236;
+}
