--- a/assets/style/seminario/theme-default-mobile.css
+++ b/assets/style/seminario/theme-default-mobile.css
@@ -18,7 +18,7 @@
 }
 
 @media (max-width: 620px) {
-    .lista-topicos ul li {
+    .lista-topicos ul li, .referencias {
         font-size: .9em;
     }
 }
@@ -29,7 +29,7 @@
         margin: 1.5em;
     }
 
-    .lista-topicos ul li {
+    .lista-topicos ul li, .referencias {
         font-size: .8em;
     }
 }
