--- a/assets/style/seminario/theme-default.css
+++ b/assets/style/seminario/theme-default.css
@@ -168,5 +168,19 @@ footer {
     color: #5840c2;
 }   
 
+.referencias {
+    margin-top: 1em;
+    font-size: 22px;
+    font-weight: 600;
+    background-color: #5840c2;
+    color: #fff;
+    padding: .5em 2em;
+    border-radius: .7em;
+    cursor: pointer;
+}
+
+.referencias:hover {
+    background-color: #735ae4;
+}
 
 
