--- a/assets/style/seminario/theme-default.css
+++ b/assets/style/seminario/theme-default.css
@@ -206,8 +206,8 @@ footer {
 }
 
 .participantes-creditos ul li img {
-    width: 100%;
-    height: 100%;
+    max-width: 100%; /* Garante que a imagem não ultrapasse a largura do contêiner */
+    max-height: 15em;
     border-radius: 1em;
     box-shadow: .1em .1em .3em #27272750;
     margin-bottom: 1em;
