--- a/assets/style/seminario/theme-default.css
+++ b/assets/style/seminario/theme-default.css
@@ -156,7 +156,7 @@ footer {
 
 .referencias {
     margin-top: 1em;
-    font-size: 22px;
+    font-size: 18px;
     font-weight: 600;
     background-color: #5840c2;
     color: #fff;
@@ -229,11 +229,19 @@ footer {
     color: #5840c2;
 }
 
+.participantes-creditos ul li p {
+    margin: .5em 0em;
+    box-shadow: .1em .1em .3em #27272750;
+    padding: .5em 2em;
+    border-radius: .5em;
+}
+
 /* Visualizar PDF */
 
 #pdf-viewer {
     height: 600px;
     border: 1px solid #ccc;
+    width: 70%;
 }
 
 .v-pdf {
@@ -269,4 +277,54 @@ footer {
     padding: 1em;
     border-radius: 1em;
     box-shadow: .1em .1em .3em #27272750;
+}
+
+/*--------------------------------------------------------------------*/
+
+.voltar-ref {
+    font-size: 1.2em;
+    font-weight: 600;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: .7em;
+    width: 3em;
+}
+
+.voltar-ref span {
+    padding: .5em 1em;
+    color: #fff;
+    background-color: #5840c2;
+    cursor: pointer;
+}
+
+
+.voltar-ref span:hover {
+    background-color: #735ae4;
+}
+
+/* Introdução */
+
+.padrao-edit {
+    margin: 1em 4em;
+}
+
+.padrao-edit h1 {
+    font-size: 2em;
+    margin: 1em 0em;
+}
+
+.padrao-edit h1::after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: .2em;
+    background: linear-gradient(50deg, #b61717 1%, 70%, #4210f7 110%);
+    border-radius: 1em;
+    margin-top: .3em;
+}
+
+.padrao-edit p {    
+    margin: 1em 0em;
 }
