--- a/assets/style/seminario/theme-default.css
+++ b/assets/style/seminario/theme-default.css
@@ -332,3 +332,17 @@ footer {
 .padrao-edit p {    
     margin: 1em 0em;
 }
+
+.professor {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 2em 0em;
+}
+
+.professor img {
+    margin-top: 1em;
+    box-shadow: .1em .1em .3em #27272750;
+    border-radius: 1em;
+    width: 60%;
+}
