--- a/assets/style/pagina-inicial/theme-default.css
+++ b/assets/style/pagina-inicial/theme-default.css
@@ -142,7 +142,7 @@ main {
 }
 
 .projetos-finalizados ul li {
-    margin: .8em 0em;
+    margin: 1em 0em;
 }
 
 .desen-andamento ul li, .projetos-finalizados ul li {
